# Paper-Scissors-Rock-Example

./: CMakeLists.txt  Readme  run.sh  win_run.bat
header/: engine.h  game.h  humanplayer.h  pcplayer.h  player.h
source/: engine.cxx  game.cxx  humanplayer.cxx  main.cxx  pcplayer.cxx  player.cxx
